course-2: small updates