@@ -114,11 +114,13 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven.surefire.plugin.version}</version>
+                    <!--
                     <configuration>
                         <argLine>
-                            --illegal-access=permit
+                            - -illegal-access=permit
                         </argLine>
                     </configuration>
+                    -->
                 </plugin>
 
             </plugins>
